updated pamela's diner page

--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -147,7 +147,7 @@
                             <div>prev</div>
                         </div>   
                     </a>
-                    <a class="small-text" href = "infosystems.html">   
+                    <a class="small-text" href = "internet.html">   
                         <div class="button right">
                             <div>next</div>
                             <img class="arrow" alt="right-arrow" src="../assets/right.png" />
