--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -72,8 +72,6 @@
                 Now, enough about all the technical jargon and intricacies. Since this was my first internship in the tech industry, I of course had to explore what Google had to offer. Outside of work, I spent time with my four other roommates (who were also Google interns) exploring campuses, meeting other interns who were studying across the country, and making memories for a lifetime. As an overview, in those 12 weeks, I visited 6 Google campuses, rode in a Waymo automated car in the streets of San Francisco, painted abstract art with the manager of my team, played beach volleyball more times than I can count on two hands, watched Halsey, The Chainsmokers, Charlie Puth, 5 Seconds of Summer, Tate McRae, and more artists perform in the Google Amphitheatre, hiked around Lake Tahoe, camped in Yosemite, explored the Youtube Headquarters, and did more than I could’ve ever imagined. From scooter rides in the morning to bike rides around campus, to G buses back home, to Ubers around town, we explored as much as we could of the ins and outs of Silicon Valley.
             </div>
 
-
-
             <div class="intros">
                 <div class="subheading">Part 1: Removing outdated, inconsistent information</div>
             </div>
@@ -118,7 +116,7 @@
         <div class="footer">
             <div class="container">
                 <div class="contact center">
-                    <a href = "25live.html">
+                    <a href = "infosystems.html">
                         <div class="button left">
                             <img class="arrow" alt="left-arrow" src="../assets/left.png" />
                             <div>prev</div>
