--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -38,16 +38,16 @@
         <section>
             <div class = "subhead">
                  <div class = "proj-title">
-                     CMU Information Systems.
+                     The Internet Age.
                  </div>
                  <div class="desc-parent">
                      <div class="desc">
                          <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
-                         <div class="date">Sept 2022 - Present</div>
+                         <div class="date">Nov - Dec 2022</div>
                      </div>
                      <div class="desc">
                          <img class="icon" alt="group-icon" src="../assets/group.png" />
-                         <div class="date">Graphic Design</div>
+                         <div class="date">UX Design, UX Research, Product Ideation</div>
                      </div>
                  </div>
             </div>
@@ -55,27 +55,12 @@
 
          <div class="body-text"> 
             <div class="img-sections">
-                <img class="imgs" alt="japanese-garden" src="../assets/electives.png" />
-                <img class="imgs" alt="yosemite" src="../assets/transfer.png" /> 
-            </div>
-      
-            <div class="img-sections">
-                <img class="imgs" alt="point-lobos" src="../assets/business-1.png" /> 
-                <img class="imgs" alt="point-lobos" src="../assets/business-2.png" /> 
+                <img class="imgs" alt="japanese-garden" src="../assets/internet1.png" />
+                <img class="imgs" alt="japanese-garden" src="../assets/internet2.png" />
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="point-lobos" src="../assets/business-3.png" /> 
-                <img class="imgs" alt="point-lobos" src="../assets/business-4.png" /> 
-            </div>
-            <div class="intros">
-                <div class="subheading">Posters and Business Cards</div>
-            </div>
-            <div class="description">
-                Here are a few graphics I've designed for the Information Systems Department
-                at Carnegie Mellon University. Outside of graphic design, I help manage the <span>
-                    <a href="google.html" class="green-font" target="_blank">CMU IS Website</a>
-                  </span>
-                by uploading up-to-date content, resources, and opportunities for students.
+                <img class="imgs" alt="japanese-garden" src="../assets/internet3.png" />
+                <img class="imgs" alt="japanese-garden" src="../assets/internet4.png" />
             </div>
         </div>
 
@@ -83,13 +68,13 @@
         <div class="footer">
             <div class="container">
                 <div class="contact center">
-                    <a href = "internet.html">
+                    <a href = "gaugeme.html">
                         <div class="button left">
                             <img class="arrow" alt="left-arrow" src="../assets/left.png" />
                             <div>prev</div>
                         </div>   
                     </a>
-                    <a class="small-text" href = "google.html">   
+                    <a class="small-text" href = "infosystems.html">   
                         <div class="button right">
                             <div>next</div>
                             <img class="arrow" alt="right-arrow" src="../assets/right.png" />
