--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -53,9 +53,206 @@
             </div>
          </section>
 
-        <section>
-           
-        </section>
+         <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Project Overview</div>
+            </div>
+            <div class="description">
+                Pamela’s Diner is a well-known breakfast chain in Pittsburgh, Pennsylvania. While known for their Lyonnaise potatoes and delicious pancakes (even recognized by former President Obama), their website is outdated. As part of a Web Development Project for my Information Systems Milieux Class, 67-250, at Carnegie Mellon, I was tasked with creating a more modern, up-to-date website for the local diner, updating aspects such as the company’s color scheme, logo, website layout, and more.
+            </div>
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Lo-Fi Wireframes</div>
+            </div>
+            <div class="wire-section">
+                <img class="port lofi" alt="start-page" src="../assets/lofi1.PNG" />
+                <img class="port lofi" alt="start-page" src="../assets/lofi2.PNG" />
+                <img class="port lofi" alt="start-page" src="../assets/lofi3.PNG" />
+            </div>
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Redesigned Logo and Color Palette</div>
+            </div>
+            <div class="wire-section">
+                <img class="port logo-size" alt="start-page" src="../assets/pamlogo.png" />
+                <img class="port color-palette" alt="intro-page" src="../assets/pamcolor.png" /> 
+            </div>
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Information Architecture</div>
+            </div>
+            <div class="wire-section">
+                <img class="port info-arch" alt="start-page" src="../assets/infoarch.png" />
+            </div>
+            <div class="description">
+                This site is built intentionally and carefully, with clear font sizes, a consistent color scheme, and ease of navigation emphasized throughout. When the user lands on the main page, they’ll notice the large, newly designed Pamela’s Diner logo and their motto. There’s a picture of one of their stores on the main page to draw the user in and provide visual stimulation. On the other four pages, I utilized subtitles and headers to break up the information and make the page more readable. I also consistently used sized and formatted body text to increase readability. The two most important areas of the website to increase ease of navigation are located at the top for easy access. The top of the website has the fixed menu and search bar so the user doesn’t have to scroll all the way up to move pages and there is no need for extra links in the footer. The footer on the right hand side contains all the important information so users can easily contact Pamela’s Diner in Shadyside, and the clickable logo allows for easy navigation back to the main page. The main objective of the organization was clear headings to organize information (hence, the Google Maps of the diner is under the Location page). Minimal, if any, information is redundant on the website, and important information (such as Pamela’s contact information) is accessible on each and every page. 
+            </div>
+        </div>
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">User Stories</div>
+            </div>
+            <div class="description">
+                <ol>
+                    <li>
+                        As a college student I want to see the hours of operation and phone number so that I can make brunch plans with my friends and call to see if they take reservations. 
+                    </li>
+                    <li>
+                        As a customer I want to see the menu/prices so that I can know what to expect when ordering (items) and whether I can afford it (price).
+                    </li>
+                    <li>
+                        As a tourist  I want to	find the location of the diner so that I can plan it into my tour around Pittsburgh.
+                    </li>
+                    <li>
+                        As a parent I want to place an online order so that I can pick it up on my way to my child's sports practice.
+                    </li>
+                    <li>
+                        As a tourist I want to see ratings and reviews so that I know whether Pamela's diner is worth going to or not (maybe I'll go to another recommended restaurant instead).
+                    </li>
+                </ol>
+            </div>            
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Research Protocol</div>
+            </div>
+            <div class="description bold">
+                User Interview Procedure
+            </div>
+            <div class="description">
+                <ol>
+                    <li>
+                        Welcome them, explain how I'm interviewing the product, not them as the user
+                    </li>
+                    <li>
+                        Open folder on my laptop
+                    </li>
+                    <li>
+                        Have interviewee open the file and navigate to the file titled index.html
+                    </li>
+                    <li>
+                        When ready, read off the first user story prompt and have the interviewee navigate the
+website to find the requested information
+                    </li>
+                    <li>
+                        Ask them to narrate their thoughts while navigating
+                    </li>
+                    <li>
+                        Ask for feedback on any concerns/issues/unclear aspects of the website
+                    </li>
+                    <li>
+                        Repeat steps 3 through 5 for the remaining 4 user stories
+                    </li>
+                    <li>
+                        Ask final questions
+                    </li>
+                    <li>
+                        Thank them for their time and allow them to voice and last-minute
+thoughts/concerns/comments
+                    </li>
+                </ol>
+                <div class="description bold">
+                    Final Questions
+                </div>
+                <ol>
+                    <li>
+                        What do you like about the website?
+                    </li>
+                    <li>
+                        Would you change anything about the website?
+                    </li>
+                    <li>
+                        Did you have any trouble navigating the website?
+                    </li>
+                    <li>
+                        Were you able to find and gather all the information you needed?
+                    </li>
+                </ol>
+            </div>            
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">User Research</div>
+            </div>
+            <div class="description bold">
+                User 1
+            </div>
+            <div class="description">
+                <ul>
+                    <li>
+                        Found all required information from 5 user stories relatively fast
+                    </li>
+                    <li>
+                        Liked how the website was easy to navigate, organized well, had clear and descriptive headers, and didn’t have excessive written information (easy to read) 
+                    </li>
+                    <li>
+                        Would change the website’s color scheme to be less distracting, would add profile pictures for customer reviews, would add hours of operation to sidebar (footer) of each page for more clarity
+                    </li>
+                    <li>
+                        Didn’t have trouble navigating website
+                    </li>
+                </ul>
+            </div>
+
+            <div class="description bold">
+                User 2
+            </div>
+            <div class="description">
+                <ul>
+                    <li>
+                        Found all required information from 5 user stories relatively fast–uncertain on finding the hours of operation (navigated to multiple tabs before it was found)
+                    </li>
+                    <li>
+                        Liked the “search for menu items” search bar, the 5 subheadings were clear and easy to navigate 
+                    </li>
+                    <li>
+                        Thought color scheme was too bright and would make hours of operation easier to find
+                    </li>
+                    <li>
+                        Didn’t have trouble navigating website for the most part
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Website Design</div>
+            </div>
+            <div class="img-sections">
+                <img class="imgs" alt="japanese-garden" src="../assets/pam1.PNG" />
+                <img class="imgs" alt="japanese-garden" src="../assets/pam2.PNG" />
+                <img class="imgs" alt="japanese-garden" src="../assets/pam3.PNG" />
+            </div>
+            <div class="img-sections">
+                <img class="imgs" alt="japanese-garden" src="../assets/pam4.PNG" />
+                <img class="imgs" alt="japanese-garden" src="../assets/pam5.PNG" />
+            </div>
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Future Steps</div>
+            </div>
+            <div class="description">
+                Based on the two user interviews, it seemed like they agreed that the website was, for the most
+                part, easy to navigate, with clear headers and good balance between visuals and text. Both users
+                thought the color scheme needed to be changed and hours of operation needed to be labeled more
+                clearly, so I made the color scheme less bright and added hours of operation to the footer on
+                every page. I also changed the Customer Reviews page to have user profile pictures. If I had
+                more time, I’d make the search bar functionality more useful so you could actually search for
+                items throughout the website and menu items as well. I would also create a more animated
+                website–elements could slide onto the page or the navigation bar could expand or minimize off
+                the side of the page.
+            </div>
+        </div>
 
         <div class="footer">
             <div class="container">
