--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -124,6 +124,17 @@
                             <div class="title-text no-blur">Gauge Me</div>
                         </div>
                         <div class="proj" id = "proj5" >
+                            <a href="projects/internet.html">
+                                <img class="cap" alt="jump" src="assets/internet1.png"  />
+                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                            </a>
+                            <div class="small-text no-blur">The Internet Age: Connecting Technology and People</div>
+                        </div>
+                        <div class="proj" id = "proj6" >
                             <a href="projects/infosystems.html">
                                 <img class="cap" alt="infosystems-img" src="assets/IS.png" />
                                 <div class = "overlay blur">
@@ -134,17 +145,6 @@
                                 </div>
                             </a>
                             <div class="small-text no-blur">CMU IS: Graphic Design</div>
-                        </div>
-                        <div class="proj" id = "proj6" >
-                            <a href="projects/gaugeme.html">
-                                <img class="cap" alt="jump" src="assets/gauge.png"  />
-                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
-                            </a>
-                            <div class="small-text no-blur">Gauge Me</div>
                         </div>
                     </div>
                 </div>
