--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -6,7 +6,7 @@
 
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-    
+        <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="projects.css">
         <script defer src="js/app.js"></script>
@@ -54,13 +54,124 @@
          </section>
 
          <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Project Overview</div>
+            </div>
+            <div class="description">
+                What is Information Systems? What does it do for our society? Where does it appear in our daily lives? Why should I care about the industry? As part of a project for 67-265, Design Fundamentals: Shaping Interactions and Experiences, we were tasked with creating an immersive online experience that answered the question, “What is IS?” and could transform inexperience and bias into insight for stakeholders. The project involved the synthesis of pre-task experience, color theory, typography, and visual/verbal complementary meaning, in order to address an issue linked to lack of knowledge or bias.
+            </div>
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Project Timeline</div>
+            </div>
+            <div class="description">
+                <ol>
+                    <li>
+                        Conduct User Interviews
+                   </li>
+                    <li>
+                        Analyze the data to better understand the user’s goals and the user’s internal barriers to information seeking
+                    </li>
+                    <li>
+                        Prototyping a visual/verbal interactive experience that explains what IS is and why it matters
+                    </li>
+                    <li>
+                        Refine and rework early iterations into final iterations
+                    </li>
+                    <li>
+                        Conduct usability testing and improve design
+                    </li>
+                </ol>
+            </div>            
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Research Protocol</div>
+            </div>
+            <div class="description bold">
+                User Interview Procedure
+            </div>
+            <div class="description">
+                <ol>
+                    <li>
+                        Welcome them, explain how I'm interviewing the product, not them as the user
+                    </li>
+                    <li>
+                        Have them introduce their name, year in school, and major(s)/minor(s)
+                    </li>
+                    <li>
+                        Proceed with Interview Questions
+                    </li>
+                    <li>
+                        Ask them to explain their thought process when answering
+                    </li>
+                    <li>
+                        Thank them for their time and allow them to voice any last-minute
+thoughts/concerns/comments
+                    </li>
+                </ol>
+                <div class="description bold">
+                    Interview Questions
+                </div>
+                <ol>
+                    <li>
+                        Have you ever considered switching majors? If so, to what?
+                    </li>
+                    <li>
+                        What do you think of your major compared to other majors?
+                    </li>
+                    <li>
+                        What do you think is the value of IS in the industry you are majoring in?
+                    </li>
+                    <li>
+                        What is the first thing you think of when someone says ‘Information Systems’?
+                    </li>
+                    <li>
+                        What do you think about people majoring in IS?
+                    </li>
+                </ol>
+            </div>            
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">User Research</div>
+            </div>
+            <div class="description">
+                Our stakeholders are non-IS majors at Carnegie Mellon University. Their common goals are to pursue a major combination that genuinely interests them or to transfer to one that does. Upon interviewing them, we found that a common thread was that they cared about studying something interdisciplinary–they (understandably) wanted to work at the intersection of their interests. Our users reach their goals of pursuing a major that interests them by exploring different opportunities around campus and in the community. However, it’s difficult to explore your passions and interests when there’s only so much time in the day beyond classes and schoolwork. Whether it’s assignments, extracurriculars, or the fact of just getting acclimated to the college environment, it can be difficult to discover interests amidst the chaos. Upon analyzing the user survey results, we found that many students “don’t know what IS is.” Since they didn’t have a clear grasp on what IS was, they couldn’t really say the last time they recalled when IS helped them.
+            </div>
+        </div>
+
+         <div class="body-text"> 
+            <div class="subheading">Hi-Fi Wireframes</div>
             <div class="img-sections">
-                <img class="imgs" alt="japanese-garden" src="../assets/internet1.png" />
-                <img class="imgs" alt="japanese-garden" src="../assets/internet2.png" />
+                <img class="imgs" alt="internet-1" src="../assets/internet1.png" />
+                <img class="imgs" alt="internet-2" src="../assets/internet2.png" />
             </div>
             <div class="img-sections">
-                <img class="imgs" alt="japanese-garden" src="../assets/internet3.png" />
-                <img class="imgs" alt="japanese-garden" src="../assets/internet4.png" />
+                <img class="imgs" alt="internet-3" src="../assets/internet3.png" />
+                <img class="imgs" alt="internet-4" src="../assets/internet4.png" />
+            </div>
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Project Description</div>
+            </div>
+            <div class="description">
+                Information Systems is more prevalent than one might think or notice–it’s everywhere from smart thermometers to our laptops, to ordering food through DoorDash, to ordering concert tickets for Taylor Swift, and more. Data is everywhere–we live in the age of information, and IS is imperative in making that information accessible, secure, and malleable.
+            </div>
+            <div class="description">
+                The Internet Age is a website seeking to bridge the gap between Information Systems and society. If users don’t see a personal connection to a product or service, it’s hard to engage and fully receive the information. In order to bridge this gap, I’ve made one of the three parts of my website explain what IS is and how it manifests in everyday life. Thus, users can get a better understanding of why IS actually matters and how it applies to them.
+            </div>
+            <div class="description">
+                The second component of my website addresses the user group (non-IS majors): it provides internship, research, and co-op opportunities that integrate IS with different industries. College students are always on the internship and career search grind. Any internship resource will attract the attention of students. People can filter by their own major or field of study (e.g. design, business, engineering, etc.) and find career-related opportunities that mix their interests with IS. A design student who previously may have wanted to work in product design or fashion design can now discover UI/UX and graphic design internships at companies. The third component addresses how IS can be used for social good. People can learn about how to get involved in IS-related opportunities, whether it be hackathons, community service, or more.
+            </div>
+            <div class="description">
+                Instead of having to dig through university websites, Google articles, and a rabbit hole to find the information they need and want, all the useful career-related information, educational information, informative hackathons, and volunteer opportunities are presented in a unified fashion. Non-IS students no longer have to sift through layers of information and websites to figure out future career opportunities, and by navigating to the site and finding internships they like, they’ll be more likely to click on the other tabs and learn about what IS actually is, and how it manifests in the news and their daily lives. In The Internet Age, it's imperative information is presented in an easily digestible and visually attractive format. Information Systems is everywhere, we just need to help people see that.
             </div>
         </div>
 
