--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -6,7 +6,7 @@
 
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-    
+        <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="projects.css">
         <script defer src="js/app.js"></script>
@@ -154,7 +154,7 @@ website to find the requested information
                         Ask final questions
                     </li>
                     <li>
-                        Thank them for their time and allow them to voice and last-minute
+                        Thank them for their time and allow them to voice any last-minute
 thoughts/concerns/comments
                     </li>
                 </ol>
@@ -229,11 +229,20 @@ thoughts/concerns/comments
             <div class="img-sections">
                 <img class="imgs" alt="japanese-garden" src="../assets/pam1.PNG" />
                 <img class="imgs" alt="japanese-garden" src="../assets/pam2.PNG" />
-                <img class="imgs" alt="japanese-garden" src="../assets/pam3.PNG" />
+                <img class="imgs" alt="japanese-garden" src="../assets/pam5.PNG" />
             </div>
             <div class="img-sections">
+                <img class="imgs" alt="japanese-garden" src="../assets/pam3.PNG" />
                 <img class="imgs" alt="japanese-garden" src="../assets/pam4.PNG" />
-                <img class="imgs" alt="japanese-garden" src="../assets/pam5.PNG" />
+            </div>
+        </div>
+
+        <div class="body-text"> 
+            <div class="intros">
+                    <div class="subheading">Programming the Product</div>
+            </div>
+            <div class="description">
+                After over 2,200 lines of code in Javascript, HTML, and CSS, the interactive website prototype for Pamela’s Diner was created. The prototype contained over 5 webpages, a search bar, clickable icons, expanding accordion content, feedback forms, and more.  
             </div>
         </div>
 
