--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="icon" type="image/png" href="assets/H..png" />
+        <link rel="icon" type="image/png" href="assets/h-icon.png" />
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="stylesheet" href="css/style.css">
@@ -126,11 +126,7 @@
                         <div class="proj" id = "proj5" >
                             <a href="projects/internet.html">
                                 <img class="cap" alt="jump" src="assets/internet1.png"  />
-                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                                <div class = "overlay blur"> A project centered around answering the question "What is IS?And why should people care? This project integrates design principles such as color theory, typography, and complementary meaning to create an effective visual experience." </div>
                             </a>
                             <div class="small-text no-blur">The Internet Age: Connecting Technology and People</div>
                         </div>
