--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -6,7 +6,7 @@
         <link rel="icon" type="image/png" href="../assets/huarui-logo.PNG" />
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-    
+        <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="projects.css">
         <script defer src="js/app.js"></script>
